2014-12-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-luajit-flags.m4: LuaJIT is now a Libtool library.

2014-12-02  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-visibility.m4: Also try -fvisibility-inlines-hidden.

2014-11-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-win32.m4: Check for WIN64 and AC_SUBST([WIN_WRAPPER]).

2014-10-22  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-lua52-flags.m4: Lua52 is now a Libtool library.
	* kpse-dll-name.m4: New file to specify MinGW/Cygwin DLL names.

2014-06-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-gmp-flags.m4, kpse-mpfr-flags.m4: New files.
	* kpse-pkgs.m4 (kpse_libs_pkgs): Add gmp and mpfr.

	* kpse-lua52-flags.m4 (LUA52_DEFINES): Add -DLUAI_HASHLIMIT=6.
	* kpse-luajit-flags.m4 (LUAJIT_DEFINES): Add -DLUAI_HASHLIMIT=6.

	* kpse-search-libs.m4, kpse-size-max.m4: New files.

2014-05-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-pkgs.m4 (kpse_utils_pkgs): Drop biber.

2014-03-25  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-cairo-flags.m4, kpse-cross.m4, kpse-pixman-flags.m4,
	kpse-poppler-flags.m4, kpse-potrace-flags.m4, kpse-win32.m4,
	kpse-zziplib-flags.m4: Clean up.

2014-03-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-setup.m4: Disable LuaJITTeX for known unsupported systems.

2014-03-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-luajit-flags.m4 (KPSE_LUAJIT_DEFINES): Set LUAJIT_LDEXTRA
	to the additional LDFLAGS for 64-bit Darwin.

2014-03-03  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-pkgs.m4 (kpse_texk_pkgs): Drop dvipdf-x.

2014-02-20  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-cxx-hack.m4: Adapt for 32- and 64-bit Cygwin.
	From Ken Brown <kbrow1i@gmail.com>.

2014-02-14  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-luajit-flags.m4: Simplify.

2014-02-13  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* kpse-luajit-flags.m4: Adapt to proxy build system.

2014-02-05  Peter Breitenlohner  <peb@mppmu.mpg.de>
