@@ -12,7 +12,7 @@ See also comments in ../texk/README.
 cairo 1.14.0 - checked 15oct14
   http://cairographics.org/releases/
 
-freetype2 2.5.3 - checked 8mar14
+freetype2 2.5.4 - checked 7dec14
   http://savannah.nongnu.org/download/freetype/
 
 gd 2.1.0 - checked 26jun13
